# dudu-datascience

./: CMakeLists.txt  README.md  dudu.toml
scripts/: build.sh  check_target_api.sh  run.sh
spec/target_api/: IMPLEMENTATION_GAPS.md  README.md  advanced_indexing.dd  autograd_training.dd  blas_backend.dd  gpu_backend.dd  manifest.tsv  tensor_surface.dd
src/: activation_metrics_demo.dd  advanced_indexing_demo.dd  array_demos.dd  backend_surface_demo.dd  blas_backend_demo.dd  blas_demos.dd  convolution_shape_demo.dd  dudu_tensor.dd  hook_demos.dd  main.dd  mald.dd  ndad.dd  print_utils.dd  shape_stride_demo.dd  target_advanced_indexing.dd  target_autograd_training.dd  target_blas_backend.dd  target_gpu_backend.dd  target_tensor_surface.dd  tensor_demos.dd  tensor_surface_demo.dd
src/dudu_tensor/: backends.dd  index_native.hpp  opencl_native.hpp
src/mald/: datasets.dd  losses.dd  optim.dd
src/ndad/: backends.dd
